@@ -44,7 +44,6 @@ along with systemd; If not, see <http://www.gnu.org/licenses/>.
 
   <refnamediv>
     <refname>sd_bus_negotiate_fds</refname>
-    <refname>sd_bus_negotiate_timestamp</refname>
     <refname>sd_bus_negotiate_creds</refname>
 
     <refpurpose>Control feature negotiation on bus connections</refpurpose>
@@ -56,12 +55,6 @@ along with systemd; If not, see <http://www.gnu.org/licenses/>.
 
       <funcprototype>
         <funcdef>int <function>sd_bus_negotiate_fds</function></funcdef>
-        <paramdef>sd_bus *<parameter>bus</parameter></paramdef>
-        <paramdef>int <parameter>b</parameter></paramdef>
-      </funcprototype>
-
-      <funcprototype>
-        <funcdef>int <function>sd_bus_negotiate_timestamp</function></funcdef>
         <paramdef>sd_bus *<parameter>bus</parameter></paramdef>
         <paramdef>int <parameter>b</parameter></paramdef>
       </funcprototype>
@@ -90,17 +83,6 @@ along with systemd; If not, see <http://www.gnu.org/licenses/>.
     receiving or for neither, but never only in one direction. By
     default, file descriptor passing is negotiated for all
     connections.</para>
-
-    <para><function>sd_bus_negotiate_timestamps()</function> controls
-    whether implicit sender timestamps shall be attached automatically
-    to all incoming messages. Takes a bus object and a boolean, which,
-    when true, enables timestamping, and, when false, disables it. If
-    this is disabled,
-    <citerefentry><refentrytitle>sd_bus_message_get_seqno</refentrytitle><manvolnum>3</manvolnum></citerefentry>
-    fail with <constant>-ENODATA</constant> on incoming messages. Note
-    that not all transports support timestamping of messages. On local
-    transports, the timestamping is applied by the kernel and cannot be
-    manipulated by userspace.</para>
 
     <para><function>sd_bus_negotiate_creds()</function> controls
     whether implicit sender credentials shall be attached
