@@ -115,7 +115,6 @@ global:
         sd_bus_set_monitor;
         sd_bus_set_name;
         sd_bus_negotiate_fds;
-        sd_bus_negotiate_timestamp;
         sd_bus_negotiate_creds;
         sd_bus_start;
         sd_bus_close;
